--- a/style.css
+++ b/style.css
@@ -34,3 +34,9 @@ form {
   border: 2px solid black;
   padding: 2%;
 }
+
+.g-recaptcha {
+  margin-top: 15px;
+  display: flex;
+  justify-content: center;
+}
